--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -42,8 +42,8 @@ jobs:
           sudo apt-get install libvlccore-dev
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
-          chmod +x ./setup/unix.sh
-          sh ./setup/unix.sh
+          chmod +x ./setup/unix-debug.sh
+          sh ./setup/unix-debug.sh
       - name: Compile hxcpp
         run: |
           cd ~/haxelib/hxcpp/git/tools/run
@@ -93,7 +93,7 @@ jobs:
         with:
           name: linuxBuild
           path: export/release/linux/bin
-  Windows:
+  windows:
     runs-on: windows-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -115,7 +115,7 @@ jobs:
         run: |
           haxelib setup C:/haxelib
           haxelib install hxcpp > /dev/null --quiet
-          .\"setup/windows.bat"
+          .\"setup/windows-debug.bat"
         shell: cmd
       - name: Compile hxcpp
         run: |
@@ -188,8 +188,8 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
-          chmod +x ./setup/unix.sh
-          sh ./setup/unix.sh
+          chmod +x ./setup/unix-debug.sh
+          sh ./setup/unix-debug.sh
       - name: Compile hxcpp
         run: |
           cd ~/haxelib/hxcpp/git/tools/run
